use icons for edit/delete buttons, make link on exercise name visible on hover, small layout changes (Iceberg 1.5, Issue #37931)

--- a/sepm-groupphase/frontend/src/app/components/own-exercises/own-exercises.component.scss
+++ b/sepm-groupphase/frontend/src/app/components/own-exercises/own-exercises.component.scss
@@ -35,9 +35,19 @@
      line-height: 80px;
      overflow: scroll;
      -webkit-overflow-scrolling: touch;
+     font-size: 30px;
    }
   .btn {
     margin: 5px;
+    cursor: pointer;
+  }
+  .btn2 {
+    color: black;
+    font-size: 20px;
+    margin-right: 30px;
+  }
+  .btn2:hover{
+    color:lightskyblue;
   }
 }
 
